--- a/1908107010012.html
+++ b/1908107010012.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>
-        Nama : Sri Ulina Raftaini Cute
-    </h3>
-    <h3>
-        Nim : 1908107010012
-    </h3>
+    <h3>Nama : Sri Ulina Raftaini Cute</h3>
+    <h3>Nim : 1908107010012</h3>
 </body>
 </html>
